--- a/custom_components/accurate_solar_forecast/translations/es.json
+++ b/custom_components/accurate_solar_forecast/translations/es.json
@@ -138,7 +138,8 @@
                     "num_panels": "Paneles en serie",
                     "num_strings": "Series en paralelo",
                     "tilt": "Inclinación Paneles (º)",
-                    "azimuth": "Orientación Paneles (180º=S)"
+                    "azimuth": "Orientación Paneles (180º=S)",
+                    "real_production_sensor": "Sensor de Producción Real (W)"
                 }
             },
             "string_edit_select": {
@@ -156,7 +157,8 @@
                     "num_panels": "Paneles en serie",
                     "num_strings": "Series en paralelo",
                     "tilt": "Inclinación Paneles (º)",
-                    "azimuth": "Orientación Paneles (180º=S)"
+                    "azimuth": "Orientación Paneles (180º=S)",
+                    "real_production_sensor": "Sensor de Producción Real (W)"
                 }
             },
             "reconfigure_sensor_group": {
@@ -181,7 +183,8 @@
                     "num_panels": "Paneles en serie",
                     "num_strings": "Series en paralelo",
                     "tilt": "Inclinación Paneles (º)",
-                    "azimuth": "Orientación Paneles (180º=S)"
+                    "azimuth": "Orientación Paneles (180º=S)",
+                    "real_production_sensor": "Sensor de Producción Real (W)"
                 }
             }
         },
